--- a/package.json
+++ b/package.json
@@ -21,9 +21,17 @@
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.2",
     "mini-css-extract-plugin": "^1.3.9",
+    "postcss": "^8.2.8",
+    "postcss-import": "^14.0.0",
+    "postcss-loader": "^5.2.0",
+    "postcss-mixins": "^7.0.3",
+    "postcss-nested": "^5.0.5",
+    "postcss-simple-vars": "^6.0.3",
+    "style-loader": "^2.0.0",
     "webpack": "^5.25.0",
     "webpack-cli": "^4.5.0"
   },
