--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss-loader": "^5.2.0",
     "postcss-mixins": "^7.0.3",
     "postcss-nested": "^5.0.5",
+    "postcss-preset-env": "^6.7.0",
     "postcss-simple-vars": "^6.0.3",
     "style-loader": "^2.0.0",
     "webpack": "^5.25.0",
